package game_editor.view.project_editor.asset_list;

import javax.swing.*;


/**
 * TODO: Add description.
 *
 * @author  TODO: Add author.
 */
public class AddedAssetsTree extends JPanel {



}
