package game_engine.controller;

public class main {
    public static void main(String[] args) {
        GameLoop k = new GameLoop();
    }
}
