package game_engine.controller.physics_engine;


/**
 * TODO: Add description.
 *
 * @author  TODO: Add author.
 */
public class Velocity {



}
